--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
         <item>English</item>
         <item>العربية</item>
     </string-array>
+
+    <string-array name="genders">
+        <item> Male </item>
+        <item> Female </item>
+    </string-array>
+
 </resources>
