--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,34 @@
         <item>English</item>
         <item>العربية</item>
     </string-array>
+
+    <string-array name="genders">
+        <item> Male </item>
+        <item> Female </item>
+    </string-array>
+
+    <string-array name="speciality">
+        <item>Speciality</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="medicineUnits">
+        <item>capsule</item>
+        <item>mlg</item>
+        <item>tablet</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
+    <string name="error">Error</string>
+    <string name="save_folder">Save Folder</string>
+    <string name="save_image">Save Image</string>
+    <string name="save_prescription">Save Prescription</string>
+
 </resources>
